Cambien el heading principal

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="hero" id="inicio">
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <h1 class="hero-title">Arte Contemporáneo</h1>
+            <h1 class="hero-title">Arte Musical</h1>
             <p class="hero-subtitle">Descubre una colección curada de obras excepcionales que definen el arte moderno
             </p>
             <a href="#catalogo" class="btn-primary">Explorar Catálogo</a>
