Se regresa al titulo normal

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda - ONO Galería de Arte</title>
+    <title>Catálogo - ONO Galería de Arte</title>
     <meta name="description"
         content="Explora nuestra colección completa de arte contemporáneo. ONO presenta obras excepcionales de artistas emergentes y establecidos.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
