cambios lic. clau

--- a/catalog.html
+++ b/catalog.html
@@ -24,6 +24,7 @@
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-link">Inicio</a></li>
                 <li><a href="catalog.html" class="nav-link">Catálogo</a></li>
+                <li><a href="about.html" class="nav-link">Acerca de</a></li>
             </ul>
         </div>
     </nav>
@@ -33,6 +34,51 @@
         <div class="catalog-header-content">
             <h1 class="page-title">Catálogo Completo</h1>
             <p class="page-subtitle">Nuestra colección completa de arte contemporáneo</p>
+        </div>
+    </section>
+
+    <!-- Themes Filter Section -->
+    <section class="themes-section">
+        <div class="themes-container">
+            <h2 class="section-title">Explora por Tema</h2>
+            <div class="themes-grid">
+                <button class="theme-card active" data-theme="">
+                    <div class="theme-content">
+                        <h3 class="theme-title">Todos</h3>
+                        <p class="theme-count" id="count-all">80 obras</p>
+                    </div>
+                </button>
+                <button class="theme-card" data-theme="Abstracto">
+                    <div class="theme-content">
+                        <h3 class="theme-title">Abstracto</h3>
+                        <p class="theme-count" id="count-abstracto">0 obras</p>
+                    </div>
+                </button>
+                <button class="theme-card" data-theme="Retrato">
+                    <div class="theme-content">
+                        <h3 class="theme-title">Retrato</h3>
+                        <p class="theme-count" id="count-retrato">0 obras</p>
+                    </div>
+                </button>
+                <button class="theme-card" data-theme="Textual">
+                    <div class="theme-content">
+                        <h3 class="theme-title">Textual</h3>
+                        <p class="theme-count" id="count-textual">0 obras</p>
+                    </div>
+                </button>
+                <button class="theme-card" data-theme="Surrealista">
+                    <div class="theme-content">
+                        <h3 class="theme-title">Surrealista</h3>
+                        <p class="theme-count" id="count-surrealista">0 obras</p>
+                    </div>
+                </button>
+                <button class="theme-card" data-theme="Gestual">
+                    <div class="theme-content">
+                        <h3 class="theme-title">Gestual</h3>
+                        <p class="theme-count" id="count-gestual">0 obras</p>
+                    </div>
+                </button>
+            </div>
         </div>
     </section>
 
