--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <ul class="nav-links">
                 <li><a href="#inicio" class="nav-link">Inicio</a></li>
                 <li><a href="catalog.html" class="nav-link">Catálogo</a></li>
+                <li><a href="about.html" class="nav-link">Acerca de</a></li>
             </ul>
         </div>
     </nav>
@@ -34,7 +35,7 @@
             <h1 class="hero-title">Arte Contemporáneo</h1>
             <p class="hero-subtitle">Descubre una colección curada de obras excepcionales que definen el arte moderno
             </p>
-            <a href="#catalogo" class="btn-primary">Explorar Catálogo</a>
+            <a href="catalog.html" class="btn-primary">Explorar Catálogo</a>
         </div>
     </section>
 
@@ -52,85 +53,79 @@
         </div>
     </section>
 
-    <!-- Featured Works Section -->
+    <!-- Themes Section -->
     <section class="featured" id="catalogo">
         <div class="featured-container">
-            <h2 class="section-title">Obras Destacadas</h2>
+            <h2 class="section-title">Explora por Tema</h2>
             <div class="works-grid">
-                <!-- Art Card 1 -->
-                <div class="art-card">
+                <!-- Theme Card 1 - Abstracto -->
+                <a href="catalog.html?theme=Abstracto" class="art-card">
                     <div class="art-image-wrapper">
-                        <img src="images/artworks/obra1.jpg" alt="Presencia Latente" class="art-image">
+                        <img src="images/artworks/pintura3.jpg" alt="Abstracto" class="art-image">
                     </div>
                     <div class="art-info">
-                        <h3 class="art-title">Presencia Latente</h3>
-                        <p class="art-meta">Alfredo Cano Briceño · 2024</p>
-
+                        <h3 class="art-title">Abstracto</h3>
+                        <p class="art-meta">Explora obras abstractas</p>
                     </div>
-                </div>
+                </a>
 
-                <!-- Art Card 2 -->
-                <div class="art-card">
+                <!-- Theme Card 2 - Retrato -->
+                <a href="catalog.html?theme=Retrato" class="art-card">
                     <div class="art-image-wrapper">
-                        <img src="images/artworks/obra2.jpg" alt="Azure Dreams" class="art-image">
+                        <img src="images/artworks/pintura8.jpg" alt="Retrato" class="art-image">
                     </div>
                     <div class="art-info">
-                        <h3 class="art-title">Azure Dreams</h3>
-                        <p class="art-meta">Alfredo Cano Briceño · 2023</p>
-
+                        <h3 class="art-title">Retrato</h3>
+                        <p class="art-meta">Descubre retratos únicos</p>
                     </div>
-                </div>
+                </a>
 
-                <!-- Art Card 3 -->
-                <div class="art-card">
+                <!-- Theme Card 3 - Textual -->
+                <a href="catalog.html?theme=Textual" class="art-card">
                     <div class="art-image-wrapper">
-                        <img src="images/artworks/pintura3.jpg" alt="Whispered Textures" class="art-image">
+                        <img src="images/artworks/obra2.jpg" alt="Textual" class="art-image">
                     </div>
                     <div class="art-info">
-                        <h3 class="art-title">Whispered Textures</h3>
-                        <p class="art-meta">Alfredo Cano Briceño · 2024</p>
-
+                        <h3 class="art-title">Textual</h3>
+                        <p class="art-meta">Arte con texto e identidad</p>
                     </div>
-                </div>
+                </a>
 
-                <!-- Art Card 4 -->
-                <div class="art-card">
+                <!-- Theme Card 4 - Surrealista -->
+                <a href="catalog.html?theme=Surrealista" class="art-card">
                     <div class="art-image-wrapper">
-                        <img src="images/artworks/pintura4.jpg" alt="Urban Reflections" class="art-image">
+                        <img src="images/artworks/pintura5.jpg" alt="Surrealista" class="art-image">
                     </div>
                     <div class="art-info">
-                        <h3 class="art-title">Urban Reflections</h3>
-                        <p class="art-meta">Alfredo Cano Briceño· 2024</p>
-
+                        <h3 class="art-title">Surrealista</h3>
+                        <p class="art-meta">Mundos oníricos y simbólicos</p>
                     </div>
-                </div>
+                </a>
 
-                <!-- Art Card 5 -->
-                <div class="art-card">
+                <!-- Theme Card 5 - Gestual -->
+                <a href="catalog.html?theme=Gestual" class="art-card">
                     <div class="art-image-wrapper">
-                        <img src="images/artworks/pintura5.jpg" alt="Ethereal Flow" class="art-image">
+                        <img src="images/artworks/pintura17.jpg" alt="Gestual" class="art-image">
                     </div>
                     <div class="art-info">
-                        <h3 class="art-title">Ethereal Flow</h3>
-                        <p class="art-meta">Alfredo Cano Briceño · 2023</p>
-
+                        <h3 class="art-title">Gestual</h3>
+                        <p class="art-meta">Expresión a través del gesto</p>
                     </div>
-                </div>
+                </a>
 
-                <!-- Art Card 6 -->
-                <div class="art-card">
+                <!-- Theme Card 6 - Todos -->
+                <a href="catalog.html" class="art-card">
                     <div class="art-image-wrapper">
-                        <img src="images/artworks/pintura6.jpg" alt="Silent Dialogue" class="art-image">
+                        <img src="images/artworks/obra1.jpg" alt="Ver Todo" class="art-image">
                     </div>
                     <div class="art-info">
-                        <h3 class="art-title">Silent Dialogue</h3>
-                        <p class="art-meta">Alfredo Cano Briceño· 2024</p>
-
+                        <h3 class="art-title">Ver Todo</h3>
+                        <p class="art-meta">Explora la colección completa</p>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="catalog-button-wrapper">
-                <a href="catalog.html" class="btn-secondary">Mostrar todas</a>
+                <a href="catalog.html" class="btn-secondary">Explorar Catálogo Completo</a>
             </div>
         </div>
     </section>
