glassmorphism agregado, traduccion a ingles, optimizacion movil

--- a/about.html
+++ b/about.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <title>Acerca de - ONO Galería de Arte</title>
-    <meta name="title" content="Acerca de - ONO Galería de Arte">
+    <title>About - ONO Art Gallery</title>
+    <meta name="title" content="About - ONO Art Gallery">
     <meta name="description"
-        content="Conoce más sobre ONO Galería de Arte, nuestra misión, visión y el artista Alfredo Cano Briceño. Descubre nuestra historia y compromiso con el arte contemporáneo.">
+        content="Learn more about ONO Art Gallery, our mission, vision, and artist Alfredo Cano Briceño. Discover our history and commitment to contemporary art.">
     <meta name="keywords"
-        content="acerca de, galería de arte, Alfredo Cano Briceño, misión galería, visión artística, arte contemporáneo México">
-    <meta name="author" content="ONO Galería de Arte">
-    <meta name="language" content="Spanish">
+        content="about, art gallery, Alfredo Cano Briceño, gallery mission, artistic vision, contemporary art Mexico">
+    <meta name="author" content="ONO Art Gallery">
+    <meta name="language" content="English">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.onogallery.com/about.html">
-    <meta property="og:title" content="Acerca de - ONO Galería de Arte">
+    <meta property="og:title" content="About - ONO Art Gallery">
     <meta property="og:description"
-        content="Conoce más sobre ONO Galería de Arte, nuestra misión, visión y el artista Alfredo Cano Briceño.">
+        content="Learn more about ONO Art Gallery, our mission, vision, and artist Alfredo Cano Briceño.">
     <meta property="og:image" content="https://www.onogallery.com/logo1b.PNG">
-    <meta property="og:image:alt" content="ONO Galería de Arte - Acerca de Nosotros">
-    <meta property="og:locale" content="es_MX">
-    <meta property="og:site_name" content="ONO Galería de Arte">
+    <meta property="og:image:alt" content="ONO Art Gallery - About Us">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="ONO Art Gallery">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.onogallery.com/about.html">
-    <meta property="twitter:title" content="Acerca de - ONO Galería de Arte">
+    <meta property="twitter:title" content="About - ONO Art Gallery">
     <meta property="twitter:description"
-        content="Conoce nuestra historia, misión y el compromiso con el arte contemporáneo.">
+        content="Learn about our history, mission, and commitment to contemporary art.">
     <meta property="twitter:image" content="https://www.onogallery.com/logo1b.PNG">
 
     <!-- Canonical URL -->
@@ -55,9 +55,9 @@
         <div class="nav-container">
             <a href="index.html" class="logo"><img src="logo1b.PNG" alt="ONO Gallery" class="logo-img"></a>
             <ul class="nav-links">
-                <li><a href="index.html" class="nav-link">Inicio</a></li>
-                <li><a href="catalog.html" class="nav-link">Catálogo</a></li>
-                <li><a href="about.html" class="nav-link active">Acerca de</a></li>
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="catalog.html" class="nav-link">Catalog</a></li>
+                <li><a href="about.html" class="nav-link active">About</a></li>
             </ul>
         </div>
     </nav>
@@ -65,8 +65,8 @@
     <!-- About Header -->
     <section class="catalog-header">
         <div class="catalog-header-content">
-            <h1 class="page-title">Acerca de ONO</h1>
-            <p class="page-subtitle">Nuestra historia, misión y visión artística</p>
+            <h1 class="page-title">About ONO</h1>
+            <p class="page-subtitle">Our history, mission, and artistic vision</p>
         </div>
     </section>
 
@@ -75,57 +75,57 @@
         <div class="about-page-container">
             <!-- Gallery Mission -->
             <div class="about-content-block">
-                <h2 class="about-section-title">Nuestra Galería</h2>
+                <h2 class="about-section-title">Our Gallery</h2>
                 <p class="about-text">
-                    ONO es un espacio dedicado a la exhibición y promoción del arte contemporáneo.
-                    Fundada con la visión de crear un puente entre artistas visionarios y coleccionistas
-                    apasionados, nuestra galería presenta una selección cuidadosamente curada de obras
-                    que desafían convenciones y celebran la creatividad.
+                    ONO is a space dedicated to the exhibition and promotion of contemporary art.
+                    Founded with the vision of creating a bridge between visionary artists and passionate
+                    collectors, our gallery presents a carefully curated selection of works
+                    that challenge conventions and celebrate creativity.
                 </p>
                 <p class="about-text">
-                    Cada pieza en nuestra colección ha sido elegida por su capacidad única de inspirar,
-                    provocar y transformar espacios. Creemos en el poder del arte para comunicar emociones
-                    complejas, cuestionar perspectivas y enriquecer la experiencia humana.
+                    Each piece in our collection has been chosen for its unique capacity to inspire,
+                    provoke, and transform spaces. We believe in the power of art to communicate complex
+                    emotions, question perspectives, and enrich the human experience.
                 </p>
             </div>
 
             <!-- Artist Section -->
             <div class="about-content-block highlight">
-                <h2 class="about-section-title">El Artista</h2>
+                <h2 class="about-section-title">The Artist</h2>
                 <h3 class="artist-name">Alfredo Cano Briceño</h3>
                 <p class="about-text">
-                    Alfredo Cano Briceño es un artista contemporáneo cuya obra explora las complejidades
-                    de la identidad, la memoria y la experiencia humana a través de técnicas mixtas y
-                    composiciones audaces. Su trabajo se caracteriza por una paleta vibrante, texturas
-                    dinámicas y una narrativa visual que invita a la reflexión profunda.
+                    Alfredo Cano Briceño is a contemporary artist whose work explores the complexities
+                    of identity, memory, and human experience through mixed techniques and
+                    bold compositions. His work is characterized by a vibrant palette, dynamic
+                    textures, and a visual narrative that invites deep reflection.
                 </p>
                 <p class="about-text">
-                    Con una formación que abarca tanto técnicas tradicionales como experimentales,
-                    Cano Briceño ha desarrollado un lenguaje visual único que fusiona la abstracción
-                    gestual con elementos figurativos y textuales, creando obras que resuenan con
-                    audiencias contemporáneas en todo el mundo.
+                    With training that spans both traditional and experimental techniques,
+                    Cano Briceño has developed a unique visual language that fuses gestural
+                    abstraction with figurative and textual elements, creating works that resonate with
+                    contemporary audiences worldwide.
                 </p>
             </div>
 
             <!-- Mission & Vision -->
             <div class="about-content-block">
-                <h2 class="about-section-title">Misión y Visión</h2>
+                <h2 class="about-section-title">Mission and Vision</h2>
                 <div class="mission-vision-grid">
                     <div class="mission-box">
-                        <h3 class="box-title">Misión</h3>
+                        <h3 class="box-title">Mission</h3>
                         <p class="about-text">
-                            Promover y exhibir arte contemporáneo excepcional, creando un espacio donde
-                            artistas y coleccionistas puedan conectarse, inspirarse y participar en el
-                            diálogo cultural que define nuestra época.
+                            To promote and exhibit exceptional contemporary art, creating a space where
+                            artists and collectors can connect, inspire each other, and participate in the
+                            cultural dialogue that defines our era.
                         </p>
                     </div>
                     <div class="vision-box">
-                        <h3 class="box-title">Visión</h3>
+                        <h3 class="box-title">Vision</h3>
                         <p class="about-text">
-                            Ser reconocidos como una galería líder en arte contemporáneo, conocida por
-                            nuestra selección curatorial excepcional, nuestro compromiso con artistas
-                            emergentes y establecidos, y nuestra contribución al enriquecimiento cultural
-                            de la comunidad.
+                            To be recognized as a leading contemporary art gallery, known for
+                            our exceptional curatorial selection, our commitment to emerging
+                            and established artists, and our contribution to the cultural enrichment
+                            of the community.
                         </p>
                     </div>
                 </div>
@@ -133,10 +133,10 @@
 
             <!-- Contact Information -->
             <div class="about-content-block">
-                <h2 class="about-section-title">Contacto y Visitas</h2>
+                <h2 class="about-section-title">Contact and Visits</h2>
                 <div class="contact-info-grid">
                     <div class="contact-item">
-                        <h4 class="contact-label">Teléfono</h4>
+                        <h4 class="contact-label">Phone</h4>
                         <p class="contact-value">
                             <a href="tel:+527771202775" class="contact-link">+52 777 120 2775</a>
                         </p>
@@ -148,17 +148,17 @@
                         </p>
                     </div>
                     <div class="contact-item">
-                        <h4 class="contact-label">Horario</h4>
+                        <h4 class="contact-label">Hours</h4>
                         <p class="contact-value">
-                            Lunes - Sábado<br>
-                            8:00 - 18:00
+                            Monday - Saturday<br>
+                            8:00 AM - 6:00 PM
                         </p>
                     </div>
                 </div>
                 <p class="about-text" style="margin-top: 2rem;">
-                    Te invitamos a visitar nuestra galería y experimentar el arte en persona.
-                    Para consultas sobre obras específicas o para agendar una visita privada,
-                    no dudes en contactarnos.
+                    We invite you to visit our gallery and experience art in person.
+                    For inquiries about specific works or to schedule a private visit,
+                    please don't hesitate to contact us.
                 </p>
             </div>
         </div>
@@ -174,21 +174,21 @@
                 </p>
             </div>
             <div class="footer-column">
-                <h4 class="footer-heading">Contacto</h4>
+                <h4 class="footer-heading">Contact</h4>
                 <a href="tel:+527771202775" class="footer-link">+52 777 120 2775</a>
                 <a href="mailto:claudia@backyou.com.mx" class="footer-link">claudia@backyou.com.mx</a>
             </div>
             <div class="footer-column">
-                <h4 class="footer-heading">Horario</h4>
+                <h4 class="footer-heading">Hours</h4>
                 <p class="footer-text">
-                    Lunes - Sábado<br>
-                    8:00 - 18:00<br>
+                    Monday - Saturday<br>
+                    8:00 AM - 6:00 PM<br>
 
                 </p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 ONO Galería de Arte. Todos los derechos reservados.</p>
+            <p>&copy; 2024 ONO Art Gallery. All rights reserved.</p>
         </div>
     </footer>
 
