--- a/catalog.html
+++ b/catalog.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <title>Catálogo Completo - ONO Galería de Arte</title>
-    <meta name="title" content="Catálogo Completo - ONO Galería de Arte">
+    <title>Full Catalog - ONO Art Gallery</title>
+    <meta name="title" content="Full Catalog - ONO Art Gallery">
     <meta name="description"
-        content="Explora nuestra colección completa de arte contemporáneo. ONO presenta obras excepcionales de artistas emergentes y establecidos, organizadas por temas y estilos.">
+        content="Explore our complete collection of contemporary art. ONO presents exceptional works by emerging and established artists, organized by themes and styles.">
     <meta name="keywords"
-        content="catálogo de arte, obras disponibles, comprar arte, colección completa, arte abstracto, retratos, arte textual">
-    <meta name="author" content="ONO Galería de Arte">
-    <meta name="language" content="Spanish">
+        content="art catalog, available works, buy art, complete collection, abstract art, portraits, textual art">
+    <meta name="author" content="ONO Art Gallery">
+    <meta name="language" content="English">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.onogallery.com/catalog.html">
-    <meta property="og:title" content="Catálogo Completo - ONO Galería de Arte">
+    <meta property="og:title" content="Full Catalog - ONO Art Gallery">
     <meta property="og:description"
-        content="Explora nuestra colección completa de arte contemporáneo. ONO presenta obras excepcionales de artistas emergentes y establecidos.">
+        content="Explore our complete collection of contemporary art. ONO presents exceptional works by emerging and established artists.">
     <meta property="og:image" content="https://www.onogallery.com/images/artworks/pintura3.jpg">
-    <meta property="og:image:alt" content="Catálogo de Arte Contemporáneo - ONO Gallery">
-    <meta property="og:locale" content="es_MX">
-    <meta property="og:site_name" content="ONO Galería de Arte">
+    <meta property="og:image:alt" content="Contemporary Art Catalog - ONO Gallery">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="ONO Art Gallery">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.onogallery.com/catalog.html">
-    <meta property="twitter:title" content="Catálogo Completo - ONO Galería de Arte">
+    <meta property="twitter:title" content="Full Catalog - ONO Art Gallery">
     <meta property="twitter:description"
-        content="Explora nuestra colección completa de arte contemporáneo organizadas por temas y estilos.">
+        content="Explore our complete collection of contemporary art organized by themes and styles.">
     <meta property="twitter:image" content="https://www.onogallery.com/images/artworks/pintura3.jpg">
 
     <!-- Canonical URL -->
@@ -55,9 +55,9 @@
         <div class="nav-container">
             <a href="index.html" class="logo"><img src="logo1b.PNG" alt="ONO Gallery" class="logo-img"></a>
             <ul class="nav-links">
-                <li><a href="index.html" class="nav-link">Inicio</a></li>
-                <li><a href="catalog.html" class="nav-link">Catálogo</a></li>
-                <li><a href="about.html" class="nav-link">Acerca de</a></li>
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="catalog.html" class="nav-link">Catalog</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
             </ul>
         </div>
     </nav>
@@ -65,50 +65,50 @@
     <!-- Catalog Header -->
     <section class="catalog-header">
         <div class="catalog-header-content">
-            <h1 class="page-title">Catálogo Completo</h1>
-            <p class="page-subtitle">Nuestra colección completa de arte contemporáneo</p>
+            <h1 class="page-title">Full Catalog</h1>
+            <p class="page-subtitle">Our complete collection of contemporary art</p>
         </div>
     </section>
 
     <!-- Themes Filter Section -->
     <section class="themes-section">
         <div class="themes-container">
-            <h2 class="section-title">Explora por Tema</h2>
+            <h2 class="section-title">Explore by Theme</h2>
             <div class="themes-grid">
                 <button class="theme-card active" data-theme="">
                     <div class="theme-content">
-                        <h3 class="theme-title">Todos</h3>
-                        <p class="theme-count" id="count-all">80 obras</p>
+                        <h3 class="theme-title">All</h3>
+                        <p class="theme-count" id="count-all">80 artworks</p>
                     </div>
                 </button>
-                <button class="theme-card" data-theme="Abstracto">
+                <button class="theme-card" data-theme="Abstract">
                     <div class="theme-content">
-                        <h3 class="theme-title">Abstracto</h3>
-                        <p class="theme-count" id="count-abstracto">0 obras</p>
+                        <h3 class="theme-title">Abstract</h3>
+                        <p class="theme-count" id="count-abstract">0 artworks</p>
                     </div>
                 </button>
-                <button class="theme-card" data-theme="Retrato">
+                <button class="theme-card" data-theme="Portrait">
                     <div class="theme-content">
-                        <h3 class="theme-title">Retrato</h3>
-                        <p class="theme-count" id="count-retrato">0 obras</p>
+                        <h3 class="theme-title">Portrait</h3>
+                        <p class="theme-count" id="count-portrait">0 artworks</p>
                     </div>
                 </button>
                 <button class="theme-card" data-theme="Textual">
                     <div class="theme-content">
                         <h3 class="theme-title">Textual</h3>
-                        <p class="theme-count" id="count-textual">0 obras</p>
+                        <p class="theme-count" id="count-textual">0 artworks</p>
                     </div>
                 </button>
-                <button class="theme-card" data-theme="Surrealista">
+                <button class="theme-card" data-theme="Surrealist">
                     <div class="theme-content">
-                        <h3 class="theme-title">Surrealista</h3>
-                        <p class="theme-count" id="count-surrealista">0 obras</p>
+                        <h3 class="theme-title">Surrealist</h3>
+                        <p class="theme-count" id="count-surrealist">0 artworks</p>
                     </div>
                 </button>
-                <button class="theme-card" data-theme="Gestual">
+                <button class="theme-card" data-theme="Gestural">
                     <div class="theme-content">
-                        <h3 class="theme-title">Gestual</h3>
-                        <p class="theme-count" id="count-gestual">0 obras</p>
+                        <h3 class="theme-title">Gestural</h3>
+                        <p class="theme-count" id="count-gestural">0 artworks</p>
                     </div>
                 </button>
             </div>
@@ -135,21 +135,21 @@
                 </p>
             </div>
             <div class="footer-column">
-                <h4 class="footer-heading">Contacto</h4>
+                <h4 class="footer-heading">Contact</h4>
                 <a href="tel:+527771202775" class="footer-link">+52 777 120 2775</a>
                 <a href="mailto:claudia@backyou.com.mx" class="footer-link">claudia@backyou.com.mx</a>
             </div>
             <div class="footer-column">
-                <h4 class="footer-heading">Horario</h4>
+                <h4 class="footer-heading">Hours</h4>
                 <p class="footer-text">
-                    Lunes - Sábado<br>
-                    8:00 - 18:00<br>
+                    Monday - Saturday<br>
+                    8:00 AM - 6:00 PM<br>
 
                 </p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 ONO Galería de Arte. Todos los derechos reservados.</p>
+            <p>&copy; 2024 ONO Art Gallery. All rights reserved.</p>
         </div>
     </footer>
 
