--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <title>ONO - Galería de Arte Contemporáneo</title>
-    <meta name="title" content="ONO - Galería de Arte Contemporáneo">
+    <title>ONO - Contemporary Art Gallery</title>
+    <meta name="title" content="ONO - Contemporary Art Gallery">
     <meta name="description"
-        content="ONO es una galería de arte contemporáneo dedicada a presentar obras excepcionales de artistas emergentes y establecidos. Descubre nuestra colección curada de arte moderno.">
+        content="ONO is a contemporary art gallery dedicated to presenting exceptional works by emerging and established artists. Discover our curated collection of modern art.">
     <meta name="keywords"
-        content="galería de arte, arte contemporáneo, obras de arte, Alfredo Cano Briceño, colección de arte, galería México, arte moderno">
-    <meta name="author" content="ONO Galería de Arte">
-    <meta name="language" content="Spanish">
+        content="art gallery, contemporary art, artworks, Alfredo Cano Briceño, art collection, Mexico gallery, modern art">
+    <meta name="author" content="ONO Art Gallery">
+    <meta name="language" content="English">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.onogallery.com/">
-    <meta property="og:title" content="ONO - Galería de Arte Contemporáneo">
+    <meta property="og:title" content="ONO - Contemporary Art Gallery">
     <meta property="og:description"
-        content="ONO es una galería de arte contemporáneo dedicada a presentar obras excepcionales de artistas emergentes y establecidos. Descubre nuestra colección curada de arte moderno.">
+        content="ONO is a contemporary art gallery dedicated to presenting exceptional works by emerging and established artists. Discover our curated collection of modern art.">
     <meta property="og:image" content="https://www.onogallery.com/images/artworks/obra1.jpg">
-    <meta property="og:image:alt" content="Galería de Arte ONO - Arte Contemporáneo">
-    <meta property="og:locale" content="es_MX">
-    <meta property="og:site_name" content="ONO Galería de Arte">
+    <meta property="og:image:alt" content="ONO Art Gallery - Contemporary Art">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="ONO Art Gallery">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.onogallery.com/">
-    <meta property="twitter:title" content="ONO - Galería de Arte Contemporáneo">
+    <meta property="twitter:title" content="ONO - Contemporary Art Gallery">
     <meta property="twitter:description"
-        content="ONO es una galería de arte contemporáneo dedicada a presentar obras excepcionales de artistas emergentes y establecidos.">
+        content="ONO is a contemporary art gallery dedicated to presenting exceptional works by emerging and established artists.">
     <meta property="twitter:image" content="https://www.onogallery.com/images/artworks/obra1.jpg">
 
     <!-- Canonical URL -->
@@ -52,10 +52,10 @@
     {
         "@context": "https://schema.org",
         "@type": "ArtGallery",
-        "name": "ONO Galería de Arte",
+        "name": "ONO Art Gallery",
         "url": "https://www.onogallery.com",
         "logo": "https://www.onogallery.com/logo1b.PNG",
-        "description": "Galería de arte contemporáneo dedicada a presentar obras excepcionales de artistas emergentes y establecidos",
+        "description": "Contemporary art gallery dedicated to presenting exceptional works by emerging and established artists",
         "address": {
             "@type": "PostalAddress",
             "addressCountry": "MX",
@@ -85,9 +85,9 @@
         <div class="nav-container">
             <a href="#inicio" class="logo"><img src="logo1b.PNG" alt="ONO Gallery" class="logo-img"></a>
             <ul class="nav-links">
-                <li><a href="#inicio" class="nav-link">Inicio</a></li>
-                <li><a href="catalog.html" class="nav-link">Catálogo</a></li>
-                <li><a href="about.html" class="nav-link">Acerca de</a></li>
+                <li><a href="#inicio" class="nav-link">Home</a></li>
+                <li><a href="catalog.html" class="nav-link">Catalog</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
             </ul>
         </div>
     </nav>
@@ -96,23 +96,23 @@
     <section class="hero" id="inicio">
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <h1 class="hero-title">Arte Contemporáneo</h1>
-            <p class="hero-subtitle">Descubre una colección curada de obras excepcionales que definen el arte moderno
+            <h1 class="hero-title">Contemporary Art</h1>
+            <p class="hero-subtitle">Discover a curated collection of exceptional works that define modern art
             </p>
-            <a href="catalog.html" class="btn-primary">Explorar Catálogo</a>
+            <a href="catalog.html" class="btn-primary">Explore Catalog</a>
         </div>
     </section>
 
     <!-- About Section -->
     <section class="about">
         <div class="about-container">
-            <h2 class="section-title">Nuestra Galería</h2>
+            <h2 class="section-title">Our Gallery</h2>
             <p class="about-text">
-                ONO es un espacio dedicado a la exhibición y promoción del arte contemporáneo.
-                Fundada con la visión de crear un puente entre artistas visionarios y coleccionistas
-                apasionados, nuestra galería presenta una selección cuidadosamente curada de obras
-                que desafían convenciones y celebran la creatividad. Cada pieza en nuestra colección
-                ha sido elegida por su capacidad única de inspirar, provocar y transformar espacios.
+                ONO is a space dedicated to the exhibition and promotion of contemporary art.
+                Founded with the vision of creating a bridge between visionary artists and passionate
+                collectors, our gallery presents a carefully curated selection of works that challenge
+                conventions and celebrate creativity. Each piece in our collection has been chosen for
+                its unique capacity to inspire, provoke, and transform spaces.
             </p>
         </div>
     </section>
@@ -120,76 +120,76 @@
     <!-- Themes Section -->
     <section class="featured" id="catalogo">
         <div class="featured-container">
-            <h2 class="section-title">Explora por Tema</h2>
+            <h2 class="section-title">Explore by Theme</h2>
             <div class="works-grid">
-                <!-- Theme Card 1 - Abstracto -->
-                <a href="catalog.html?theme=Abstracto" class="art-card">
+                <!-- Theme Card 1 - Abstract -->
+                <a href="catalog.html?theme=Abstract" class="art-card">
                     <div class="art-image-wrapper">
-                        <img src="images/artworks/pintura3.jpg" alt="Abstracto" class="art-image">
+                        <img src="images/artworks/pintura3.webp" alt="Abstract" class="art-image">
                     </div>
                     <div class="art-info">
-                        <h3 class="art-title">Abstracto</h3>
-                        <p class="art-meta">Explora obras abstractas</p>
+                        <h3 class="art-title">Abstract</h3>
+                        <p class="art-meta">Explore abstract works</p>
                     </div>
                 </a>
 
-                <!-- Theme Card 2 - Retrato -->
-                <a href="catalog.html?theme=Retrato" class="art-card">
+                <!-- Theme Card 2 - Portrait -->
+                <a href="catalog.html?theme=Portrait" class="art-card">
                     <div class="art-image-wrapper">
-                        <img src="images/artworks/pintura8.jpg" alt="Retrato" class="art-image">
+                        <img src="images/artworks/pintura10.webp" alt="Portrait" class="art-image">
                     </div>
                     <div class="art-info">
-                        <h3 class="art-title">Retrato</h3>
-                        <p class="art-meta">Descubre retratos únicos</p>
+                        <h3 class="art-title">Portrait</h3>
+                        <p class="art-meta">Discover unique portraits</p>
                     </div>
                 </a>
 
                 <!-- Theme Card 3 - Textual -->
                 <a href="catalog.html?theme=Textual" class="art-card">
                     <div class="art-image-wrapper">
-                        <img src="images/artworks/obra2.jpg" alt="Textual" class="art-image">
+                        <img src="images/artworks/pintura2.webp" alt="Textual" class="art-image">
                     </div>
                     <div class="art-info">
                         <h3 class="art-title">Textual</h3>
-                        <p class="art-meta">Arte con texto e identidad</p>
+                        <p class="art-meta">Art with text and identity</p>
                     </div>
                 </a>
 
-                <!-- Theme Card 4 - Surrealista -->
-                <a href="catalog.html?theme=Surrealista" class="art-card">
+                <!-- Theme Card 4 - Surrealist -->
+                <a href="catalog.html?theme=Surrealist" class="art-card">
                     <div class="art-image-wrapper">
-                        <img src="images/artworks/pintura5.jpg" alt="Surrealista" class="art-image">
+                        <img src="images/artworks/pintura1.webp" alt="Surrealist" class="art-image">
                     </div>
                     <div class="art-info">
-                        <h3 class="art-title">Surrealista</h3>
-                        <p class="art-meta">Mundos oníricos y simbólicos</p>
+                        <h3 class="art-title">Surrealist</h3>
+                        <p class="art-meta">Dreamlike and symbolic worlds</p>
                     </div>
                 </a>
 
-                <!-- Theme Card 5 - Gestual -->
-                <a href="catalog.html?theme=Gestual" class="art-card">
+                <!-- Theme Card 5 - Gestural -->
+                <a href="catalog.html?theme=Gestural" class="art-card">
                     <div class="art-image-wrapper">
-                        <img src="images/artworks/pintura17.jpg" alt="Gestual" class="art-image">
+                        <img src="images/artworks/pintura17.webp" alt="Gestural" class="art-image">
                     </div>
                     <div class="art-info">
-                        <h3 class="art-title">Gestual</h3>
-                        <p class="art-meta">Expresión a través del gesto</p>
+                        <h3 class="art-title">Gestural</h3>
+                        <p class="art-meta">Expression through gesture</p>
                     </div>
                 </a>
 
-                <!-- Theme Card 6 - Todos -->
+                <!-- Theme Card 6 - All -->
                 <a href="catalog.html" class="art-card">
                     <div class="art-image-wrapper">
-                        <img src="images/artworks/obra1.jpg" alt="Ver Todo" class="art-image">
+                        <img src="images/artworks/obra1.jpg" alt="View All" class="art-image">
                     </div>
                     <div class="art-info">
-                        <h3 class="art-title">Ver Todo</h3>
-                        <p class="art-meta">Explora la colección completa</p>
+                        <h3 class="art-title">View All</h3>
+                        <p class="art-meta">Explore the complete collection</p>
                     </div>
                 </a>
             </div>
             <div class="catalog-button-wrapper">
-                <a href="catalog.html" class="btn-secondary">Explorar Catálogo Completo</a>
+                <a href="catalog.html" class="btn-secondary">Explore Full Catalog</a>
             </div>
         </div>
     </section>
@@ -204,22 +204,23 @@
                 </p>
             </div>
             <div class="footer-column">
-                <h4 class="footer-heading">Contacto</h4>
+                <h4 class="footer-heading">Contact</h4>
                 <p class="footer-text">
                     <a href="tel:+52 777 120 2775" class="footer-link">+52 777 120 2775</a><br>
                     <a href="mailto:claudia@backyou.com.mx" class="footer-link">claudia@backyou.com.mx</a>
                 </p>
             </div>
             <div class="footer-column">
-                <h4 class="footer-heading">Horario</h4>
+                <h4 class="footer-heading">Hours</h4>
                 <p class="footer-text">
-                    Lunes - Sábado<br>
-                    8:00 - 18:00<br>
+                    Monday - Saturday<br>
+                    8:00 AM - 6:00 PM<br>
                 </p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 ONO Galería de Arte. Todos los derechos reservados.</p>
+            <p>&copy; 2025 ONO Art Gallery. All rights reserved.</p>
+            <p>Developed by BackYou Solutions.</p>
         </div>
     </footer>
 
