--- a/product.html
+++ b/product.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="page-title">Obra de Arte - ONO Galería</title>
-    <meta name="description" content="Detalles de la obra de arte. ONO Galería de Arte Contemporáneo.">
+    <title id="page-title">Artwork - ONO Gallery</title>
+    <meta name="description" content="Artwork details. ONO Contemporary Art Gallery.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -22,8 +22,8 @@
         <div class="nav-container">
             <a href="index.html" class="logo"><img src="logo1b.PNG" alt="ONO Gallery" class="logo-img"></a>
             <ul class="nav-links">
-                <li><a href="index.html" class="nav-link">Inicio</a></li>
-                <li><a href="catalog.html" class="nav-link">Catálogo</a></li>
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="catalog.html" class="nav-link">Catalog</a></li>
             </ul>
         </div>
     </nav>
@@ -33,7 +33,7 @@
 
     <!-- Product Detail Section -->
     <section class="product-container">
-        <a href="catalog.html" class="back-link">Volver al catálogo</a>
+        <a href="catalog.html" class="back-link">Back to catalog</a>
 
         <div id="product-content" class="product-layout">
             <!-- Content will be loaded by JavaScript -->
@@ -50,7 +50,7 @@
                 </p>
             </div>
             <div class="footer-column">
-                <h4 class="footer-heading">Contacto</h4>
+                <h4 class="footer-heading">Contact</h4>
                 <p class="footer-text">
 
                     <a href="tel:+527771202775" class="footer-link">+52 777 120 2775</a><br>
@@ -58,16 +58,16 @@
                 </p>
             </div>
             <div class="footer-column">
-                <h4 class="footer-heading">Horario</h4>
+                <h4 class="footer-heading">Hours</h4>
                 <p class="footer-text">
-                    Lunes- Sábado<br>
-                    8:00 - 18:00<br>
+                    Monday - Saturday<br>
+                    8:00 AM - 6:00 PM<br>
 
                 </p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 ONO Galería de Arte. Todos los derechos reservados.</p>
+            <p>&copy; 2024 ONO Art Gallery. All rights reserved.</p>
         </div>
     </footer>
 
