traduccion al ingles de obras hatsa la pagina 2, palabras catalogo cambiado por galeria y temas por coelcction

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             <a href="#inicio" class="logo"><img src="logo1b.PNG" alt="ONO Gallery" class="logo-img"></a>
             <ul class="nav-links">
                 <li><a href="#inicio" class="nav-link">Home</a></li>
-                <li><a href="catalog.html" class="nav-link">Catalog</a></li>
-                <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="gallery.html" class="nav-link">Gallery</a></li>
+                <li><a href="about.html" class="nav-link">About us</a></li>
             </ul>
         </div>
     </nav>
@@ -99,7 +99,7 @@
             <h1 class="hero-title">Contemporary Art</h1>
             <p class="hero-subtitle">Discover a curated collection of exceptional works that define modern art
             </p>
-            <a href="catalog.html" class="btn-primary">Explore Catalog</a>
+            <a href="gallery.html" class="btn-primary">Explore Gallery</a>
         </div>
     </section>
 
@@ -120,10 +120,10 @@
     <!-- Themes Section -->
     <section class="featured" id="catalogo">
         <div class="featured-container">
-            <h2 class="section-title">Explore by Theme</h2>
+            <h2 class="section-title">Explore by Collection</h2>
             <div class="works-grid">
                 <!-- Theme Card 1 - Abstract -->
-                <a href="catalog.html?theme=Abstract" class="art-card">
+                <a href="gallery.html?collection=Abstract" class="art-card">
                     <div class="art-image-wrapper">
                         <img src="images/artworks/pintura3.webp" alt="Abstract" class="art-image">
                     </div>
@@ -134,7 +134,7 @@
                 </a>
 
                 <!-- Theme Card 2 - Portrait -->
-                <a href="catalog.html?theme=Portrait" class="art-card">
+                <a href="gallery.html?collection=Portrait" class="art-card">
                     <div class="art-image-wrapper">
                         <img src="images/artworks/pintura10.webp" alt="Portrait" class="art-image">
                     </div>
@@ -145,7 +145,7 @@
                 </a>
 
                 <!-- Theme Card 3 - Textual -->
-                <a href="catalog.html?theme=Textual" class="art-card">
+                <a href="gallery.html?collection=Textual" class="art-card">
                     <div class="art-image-wrapper">
                         <img src="images/artworks/pintura2.webp" alt="Textual" class="art-image">
                     </div>
@@ -156,7 +156,7 @@
                 </a>
 
                 <!-- Theme Card 4 - Surrealist -->
-                <a href="catalog.html?theme=Surrealist" class="art-card">
+                <a href="gallery.html?collection=Surrealist" class="art-card">
                     <div class="art-image-wrapper">
                         <img src="images/artworks/pintura1.webp" alt="Surrealist" class="art-image">
                     </div>
@@ -167,7 +167,7 @@
                 </a>
 
                 <!-- Theme Card 5 - Gestural -->
-                <a href="catalog.html?theme=Gestural" class="art-card">
+                <a href="gallery.html?collection=Gestural" class="art-card">
                     <div class="art-image-wrapper">
                         <img src="images/artworks/pintura17.webp" alt="Gestural" class="art-image">
                     </div>
@@ -178,7 +178,7 @@
                 </a>
 
                 <!-- Theme Card 6 - All -->
-                <a href="catalog.html" class="art-card">
+                <a href="gallery.html" class="art-card">
                     <div class="art-image-wrapper">
                         <img src="images/artworks/obra1.jpg" alt="View All" class="art-image">
                     </div>
@@ -189,7 +189,7 @@
                 </a>
             </div>
             <div class="catalog-button-wrapper">
-                <a href="catalog.html" class="btn-secondary">Explore Full Catalog</a>
+                <a href="gallery.html" class="btn-secondary">Explore Full Gallery</a>
             </div>
         </div>
     </section>
