--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="catalog.css">
+    <link rel="stylesheet" href="gallery.css">
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.3.0/model-viewer.min.js"></script>
 </head>
 
@@ -23,7 +23,8 @@
             <a href="index.html" class="logo"><img src="logo1b.PNG" alt="ONO Gallery" class="logo-img"></a>
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="catalog.html" class="nav-link">Catalog</a></li>
+                <li><a href="gallery.html" class="nav-link">Gallery</a></li>
+                <li><a href="about.html" class="nav-link">About us</a></li>
             </ul>
         </div>
     </nav>
@@ -33,7 +34,7 @@
 
     <!-- Product Detail Section -->
     <section class="product-container">
-        <a href="catalog.html" class="back-link">Back to catalog</a>
+        <a href="gallery.html" class="back-link">Back to gallery</a>
 
         <div id="product-content" class="product-layout">
             <!-- Content will be loaded by JavaScript -->
