--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="catalog.css">
+    <link rel="stylesheet" href="gallery.css">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
             <a href="index.html" class="logo"><img src="logo1b.PNG" alt="ONO Gallery" class="logo-img"></a>
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="catalog.html" class="nav-link">Catalog</a></li>
+                <li><a href="gallery.html" class="nav-link">Gallery</a></li>
                 <li><a href="about.html" class="nav-link active">About</a></li>
             </ul>
         </div>
