traduccion de titulos y descripcion de artworks

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
-                <h3 class="footer-title"><img src="logo1b.PNG" alt="ONO Gallery" class="logo-img"></h3>
+                <h3 class="footer-title"><img src="logo1g.png" alt="ONO Gallery" class="logo-img footer-logo"></h3>
                 <p class="footer-text">
 
                 </p>
