--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="gallery.html" class="nav-link">Gallery</a></li>
-                <li><a href="about.html" class="nav-link active">About</a></li>
+                <li><a href="about.html" class="nav-link active">About us</a></li>
             </ul>
         </div>
     </nav>
@@ -168,7 +168,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
-                <h3 class="footer-title"><img src="logo1b.PNG" alt="ONO Gallery" class="logo-img"></h3>
+                <h3 class="footer-title"><img src="logo1g.png" alt="ONO Gallery" class="logo-img footer-logo"></h3>
                 <p class="footer-text">
 
                 </p>
