--- a/about.html
+++ b/about.html
@@ -188,7 +188,8 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 ONO Art Gallery. All rights reserved.</p>
+            <p>&copy; 2025 ONO Art Gallery. All rights reserved.</p>
+            <p> Desarrollado por BackYou Solutions.</p>
         </div>
     </footer>
 
