--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <div class="footer-column">
                 <h4 class="footer-heading">Contact</h4>
                 <p class="footer-text">
-                    <a href="tel:+52 777 120 2775" class="footer-link">+52 777 120 2775</a><br>
+                    <a href="tel:+52 777 120 2775" class="footer-link">+52 777 120 2775</a>
                     <a href="mailto:claudia@backyou.com.mx" class="footer-link">claudia@backyou.com.mx</a>
                 </p>
             </div>
